--- a/ImpactMap/Views/Investments/Details.cshtml
+++ b/ImpactMap/Views/Investments/Details.cshtml
@@ -16,7 +16,7 @@
     <div>
         <hr />
         <table class="table">
-            <tr>
+            <tr class="dashtr">
                 <th>
                     @Html.DisplayNameFor(model => model.date)
                 </th>
@@ -48,7 +48,7 @@
                 </th>
             </tr>
 
-            <tr>
+            <tr class="dashtr">
                 <td>
                     @Html.DisplayFor(model => model.date)
                 </td>
