--- a/ImpactMap/Views/Investments/Index.cshtml
+++ b/ImpactMap/Views/Investments/Index.cshtml
@@ -20,7 +20,7 @@
        
         <br />
         <table class="table">
-            <tr>
+            <tr class="dashtr">
                 <th>
                     @*@Html.DisplayNameFor(model => Model.investmentsOut.date)*@
                     Date
@@ -56,7 +56,7 @@
 
             @foreach (var item in Model.investmentsOut)
             {
-                <tr>
+                <tr class="dashtr">
                     <td>
                         @item.date.ToString("MM/dd/yyyy")
                     </td>
