Added padding to report

--- a/ImpactMap/Views/Reports/Details.cshtml
+++ b/ImpactMap/Views/Reports/Details.cshtml
@@ -35,7 +35,8 @@
 
 
 
-<div class="container dash">
+<div class="container dash reportDiv">
+  
     <div class="col-md-8">
         <div class="dashHeading">
             <h2>
@@ -80,7 +81,7 @@
 
             </table>
         }
-
+        </div>
 
     </div>
 </div>
