--- a/ImpactMap/Views/Dashboard/Index.cshtml
+++ b/ImpactMap/Views/Dashboard/Index.cshtml
@@ -10,7 +10,7 @@
 <div class="container dash">
     <div style="vertical-align: top;">
         <div class="dashHeader">
-            <h2>@Model.name Dashboard</h2>
+            <h2><i class="fa fa-tachometer" aria-hidden="true"></i>@Model.name Dashboard</h2>
             @*Notifications dropdown*@
             <div class="dropdown">
                 <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
