--- a/ImpactMap/Views/Investments/Create.cshtml
+++ b/ImpactMap/Views/Investments/Create.cshtml
@@ -7,7 +7,7 @@
 <div class="container">
     <div class="pageInfo">
 
-        <h2>@ViewBag.Title</h2>
+        <h2><i class="fa fa-plus-circle" aria-hidden="true"></i>@ViewBag.Title</h2>
 
         <div class="subNav">
             <a href=@Url.Action("Index", "Investments")><i class="fa fa-list-alt" aria-hidden="true" title="Investments List"></i></a>
