--- a/ImpactMap/Views/Investments/Details.cshtml
+++ b/ImpactMap/Views/Investments/Details.cshtml
@@ -6,7 +6,7 @@
 
 <div class="container">
     <div class="pageInfo">
-        <h2>@ViewBag.Title</h2>
+        <h2><i class="fa fa-file-text-o" aria-hidden="true"></i>@ViewBag.Title</h2>
         <div class="subNav">
             <a href=@Url.Action("Edit", new { id = Model.ID })><i class="fa fa-pencil" aria-hidden="true" title="Edit"></i></a>
             <a href=@Url.Action("Index", "Investments")><i class="fa fa-list-alt" aria-hidden="true" title="Investment List"></i></a>
