--- a/ImpactMap/Views/Reports/Edit.cshtml
+++ b/ImpactMap/Views/Reports/Edit.cshtml
@@ -5,7 +5,7 @@
 }
 
 <div class="container">
-    <h2>@ViewBag.Title</h2>
+    <h2><i class="fa fa-list-alt" aria-hidden="true"></i>@ViewBag.Title</h2>
 
     @using (Html.BeginForm())
     {
