--- a/ImpactMap/Views/Categories/Details.cshtml
+++ b/ImpactMap/Views/Categories/Details.cshtml
@@ -5,7 +5,7 @@
 }
 <div class="container">
     <div class="pageInfo">
-    <h2>@ViewBag.Title</h2>
+    <h2>fa-ellipsis-h@ViewBag.Title</h2>
 
     <div class="subNav">
         <a href=@Url.Action("Edit", new { id = Model.ID })><i class="fa fa-pencil" aria-hidden="true" title="Edit"></i></a>
