--- a/ImpactMap/Views/Categories/Edit.cshtml
+++ b/ImpactMap/Views/Categories/Edit.cshtml
@@ -13,7 +13,7 @@
 
     <div class="form-horizontal container">
         <div class="pageInfo">
-            <h2>@ViewBag.Title</h2>
+            <h2><i class="fa fa-list-alt" aria-hidden="true"></i>@ViewBag.Title</h2>
 
             <div class="subNav">
 
