--- a/ImpactMap/Views/Categories/Index.cshtml
+++ b/ImpactMap/Views/Categories/Index.cshtml
@@ -7,7 +7,7 @@
 <div class="container">
 
     <div class="pageInfo">
-        <h2>@ViewBag.Title</h2>
+        <h2><i class="fa fa-list-alt" aria-hidden="true"></i>@ViewBag.Title</h2>
 
         <div class="subNav">
             <a href=@Url.Action("Create", "Categories")><i class="fa fa-plus-circle" aria-hidden="true" title="Create New Tag"></i></a>
