--- a/ImpactMap/Views/Entities/Edit.cshtml
+++ b/ImpactMap/Views/Entities/Edit.cshtml
@@ -6,7 +6,7 @@
 
 <div class="container">
     <div class="pageInfo">
-        <h2>@ViewBag.Title</h2>
+        <h2><i class="fa fa-list-alt" aria-hidden="true"></i>@ViewBag.Title</h2>
 
         <div class="subNav">
 
