--- a/ImpactMap/Views/Investments/Index.cshtml
+++ b/ImpactMap/Views/Investments/Index.cshtml
@@ -6,7 +6,7 @@
 <div class="container">
 
     <div class="pageInfo">
-        <h2>@ViewBag.Title</h2>
+        <h2><i class="fa fa-list-alt" aria-hidden="true"></i>@ViewBag.Title</h2>
         <div class="subNav">
             <a href=@Url.Action("Create", "Investments")><i class="fa fa-plus-circle" aria-hidden="true" title="Create New Investment"></i></a>
             <a href=@Url.Action("Index", "Investments")><i class="fa fa-list-alt" aria-hidden="true" title="Investment List"></i></a>
