--- a/ImpactMap/Views/Projects/Index.cshtml
+++ b/ImpactMap/Views/Projects/Index.cshtml
@@ -6,7 +6,7 @@
 
 <div class="container">
     <div class="pageInfo">
-        <h2>@ViewBag.Title</h2>
+        <h2><i class="fa fa-list-alt" aria-hidden="true"></i>@ViewBag.Title</h2>
 
         <div class="subNav">
             <a href=@Url.Action("Create", "Projects")><i class="fa fa-plus-circle" aria-hidden="true" title="Create New Project"></i></a>
