--- a/ImpactMap/Views/Reports/Delete.cshtml
+++ b/ImpactMap/Views/Reports/Delete.cshtml
@@ -6,7 +6,7 @@
 
 <div class="container">
     <div class="pageInfo">
-        <h2>@ViewBag.Title</h2>
+        <h2><i class="fa fa-minus-circle" aria-hidden="true"></i>@ViewBag.Title</h2>
 
         <div class="subNav">
             <a href=@Url.Action("Index", "Reports")><i class="fa fa-list-alt" aria-hidden="true" title="Tags List"></i></a>
