--- a/ImpactMap/Views/Reports/Index.cshtml
+++ b/ImpactMap/Views/Reports/Index.cshtml
@@ -7,7 +7,7 @@
 <div class="container">
 
     <div class="pageInfo">
-        <h2>@ViewBag.Title</h2>
+        <h2><i class="fa fa-list-alt" aria-hidden="true"></i>@ViewBag.Title</h2>
 
         <div class="subNav">
             <a href=@Url.Action("Index", "Dashboard")><i class="fa fa-tachometer" aria-hidden="true" title="Return to Dashboard"></i></a>
